# ESP32_UAV

./: .gitignore  README.md
RC_code/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
RC_code/components/Data_declaration/: Data_declaration.c
RC_code/components/LED/: CMakeLists.txt  (+1 more)
RC_code/main/: CMakeLists.txt  main.c
UAV_code/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old  补充说明.txt
UAV_code/components/External_communication/: CMakeLists.txt
UAV_code/components/External_communication/SI24R1/: SI24R1.c
UAV_code/components/External_communication/SI24R1/include/: SI24R1.h
UAV_code/components/External_communication/UDP_TCP/: UDP_TCP.c
UAV_code/components/External_communication/UDP_TCP/include/: UDP_TCP.h
UAV_code/components/External_communication/WIFI/: WIFI.c
UAV_code/components/External_communication/WIFI/include/: WIFI.h
UAV_code/components/External_communication/anotc_client_v4.34/: anotc.c
UAV_code/components/External_communication/anotc_client_v4.34/include/: anotc.h
UAV_code/components/External_communication/remote_control/: remote_control.c
UAV_code/components/External_communication/remote_control/include/: remote_control.h
UAV_code/components/sensor/: CMakeLists.txt
UAV_code/components/sensor/GL9306/: GL9306.c
UAV_code/components/sensor/GL9306/include/: GL9306.h
UAV_code/components/sensor/HMC5883L/: HMC5883L.c
UAV_code/components/sensor/HMC5883L/include/: HMC5883L.h
UAV_code/components/sensor/MPU6050/: MPU6050.c
UAV_code/components/sensor/MPU6050/include/: MPU6050.h
UAV_code/components/sensor/MS5611/: MS5611.c
UAV_code/components/sensor/MS5611/include/: MS5611.h
UAV_code/components/sensor/SPL06-001/: SPL06-001.c
UAV_code/components/sensor/SPL06-001/include/: SPL06-001.h
UAV_code/components/sensor/VL53L1X/: VL53L1X.c
UAV_code/components/sensor/VL53L1X/include/: VL53L1X.h
UAV_code/main/: CMakeLists.txt  main.c
files/: UAV飞行器BOM表元件清单.xlsx  遥控器BOM表元件清单.xlsx
(+68 files in other folders)
